Add HttpClient and folders: interfase, models with one file

--- a/CustomersRoleUpdater.Presentation/CustomersRoleUpdater.Presentation.csproj
+++ b/CustomersRoleUpdater.Presentation/CustomersRoleUpdater.Presentation.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CustomersRoleUpdater.Application\CustomersRoleUpdater.Application.csproj" />
+  </ItemGroup>
 </Project>
