--- a/CustomersRoleUpdater.Presentation/appsettings.Development.json
+++ b/CustomersRoleUpdater.Presentation/appsettings.Development.json
@@ -4,5 +4,40 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.Console"
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:dd-MM-yyyy HH:mm:ss.fff} {SourceContext} {Level:u3}] #{ThreadId}{TraceIdentifier}: {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./CustomersRoleUpdater_log-.txt",
+          "rollOnFileSizeLimit": true,
+          "fileSizeLimitBytes": 10485760,
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:dd-MM-yyyy HH:mm:ss.fff} {SourceContext} {Level:u3}] #{ThreadId}{TraceIdentifier}: {Message}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
