--- a/CustomersRoleUpdater.Application/CustomersRoleUpdater.Application.csproj
+++ b/CustomersRoleUpdater.Application/CustomersRoleUpdater.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.3.6" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.6" />
+  </ItemGroup>
+
 </Project>
