--- a/CustomersRoleUpdater.Application/CustomersRoleUpdater.Application.csproj
+++ b/CustomersRoleUpdater.Application/CustomersRoleUpdater.Application.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MassTransit" Version="8.3.6" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ContractForRoleUpdater\RoleRenewalContract\RoleRenewalContract.csproj" />
   </ItemGroup>
 
 </Project>
