Add temporary progect for rabbit

--- a/CustomersRoleUpdater.Presentation/CustomersRoleUpdater.Presentation.csproj
+++ b/CustomersRoleUpdater.Presentation/CustomersRoleUpdater.Presentation.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ContractForRoleUpdater\RoleRenewalContract\RoleRenewalContract.csproj" />
+    <ProjectReference Include="..\Contract\Contract.csproj" />
     <ProjectReference Include="..\CustomersRoleUpdater.Application\CustomersRoleUpdater.Application.csproj" />
   </ItemGroup>
 </Project>
