--- a/CustomersRoleUpdater.Application/CustomersRoleUpdater.Application.csproj
+++ b/CustomersRoleUpdater.Application/CustomersRoleUpdater.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ContractForRoleUpdater\RoleRenewalContract\RoleRenewalContract.csproj" />
+    <ProjectReference Include="..\Contract\Contract.csproj" />
   </ItemGroup>
 
 </Project>
